Remove submodule reference

--- a/Management/admin_dashboard.html
+++ b/Management/admin_dashboard.html
@@ -175,16 +175,16 @@
     </div>
     <script>
       $(document).ready(function() {
-        $("#dashboard-panel-container").load("/header/dashboar_panel.html");
+        $("#dashboard-panel-container").load("header/dashboar_panel.html");
     });
     $(document).ready(function() {
         $("#image-container").load("add_image.html");
     });
     $(document).ready(function() {
-        $("#carousel-container").load("/carousel/carousel.html");
+        $("#carousel-container").load("carousel/carousel.html");
     });
       $(document).ready(function() {
-        $("#calendar-container").load("/calendar/calendar.html");
+        $("#calendar-container").load("calendar/calendar.html");
     });
     
       function modalOpen() {
