--- a/Management/application/applicants_table.html
+++ b/Management/application/applicants_table.html
@@ -18,7 +18,7 @@
     <div class="md:ml-48 xl:ml-48 lg:48">
         <div class="mx-auto md:max-w-7xl md:max-h-min xl:bg-white md:bg-white shadow-md p-6 mt-8 rounded-md max-w-screen-sm">
             <div class="flex flex-col md:flex-row md:justify-between items-center mb-5">
-                <h2 class="text-2xl font-bold mb-6 font-sans md:mb-0 md:text-3xl font-kanit">Student Applications</h2>
+                <h2 class="text-2xl font-bold mb-6 md:mb-0 md:text-3xl font-kanit">Student Applications</h2>
                 <button onclick="modalOpen('myModal')"
                     class="bg-green-600 hover:bg-green-800 text-white font-sans font-bold py-2 px-4 rounded-md focus:ring-2 focus:ring-green-500 focus:outline-none transition duration-300 ease-in-out disabled:opacity-50 disabled:cursor-not-allowed">
                     Notify
