--- a/Management/index.html
+++ b/Management/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link href="../css/dist/output.css" rel="stylesheet"> 
+    <link href="/css/dist/output.css" rel="stylesheet"> 
     <script src = "../css/dist/jquery.min.js"></script>
 </head>
 <body class = "xl:bg-white">
