--- a/Management/attendance/display attendance.html
+++ b/Management/attendance/display attendance.html
@@ -46,105 +46,108 @@
         </div>
     </div>
     <script>
-     $(document).ready(function () {
-         $('#headerContainer').load('../header/admin_navs.html');
+        $(document).ready(function () {
+            $('#headerContainer').load('../header/admin_navs.html');
 
-    var page = 1; 
+        var page = 1; 
+            const params = new URLSearchParams(window.location.search);
+            const username = params.get('username');
+            console.log(username);  // Add this line for debugging
 
-    function fetchData() {
+            function fetchData() {
+            $.ajax({
+                url: 'attendance_report.php',
+                type: 'GET',
+                dataType: 'json',
+                data: { page: page, username: username },
+                success: function (response) {  
+                    console.log('AJAX Response:', response);  // Add this line for debugging
 
-        $.ajax({
-            url: 'attendance_report.php',
-            type: 'GET',
-            dataType: 'json',
-            data: { page: page }, 
-            success: function (response) {
+                    if (response.success) {
+                        displayResults(response.data);
+                    } else {
+                        displayErrorMessage(response.message);
+                    }
+                },
+            });
+        }
+                // Function to display results in the table
+        function displayResults(data) {
 
-                if (response.success) {
-                    displayResults(response.data);
-                } else {
-                    displayErrorMessage(response.message);
+            var resultsContainer = $('#resultsContainer');
+            resultsContainer.empty();
+
+            if (data.length > 0) {
+                var table = $('<table class="min-w-full divide-y divide-gray-200"></table>');
+                var thead = $('<thead></thead>');
+                var tbody = $('<tbody class="text-gray-700 font-light"></tbody>');
+
+                // Add table headers
+                var headersRow = $('<tr class="bg-green-700 text-white"></tr>');
+                headersRow.append('<th class="px-4 py-2 md:w-1/6 border-b-2 border-gray-200 text-left text-xs font-semibold uppercase tracking-wide font-rubik">Name</th>');
+                headersRow.append('<th class="px-4 py-2 md:w-1/6 border-b-2 border-gray-200 text-left text-xs font-semibold uppercase tracking-wider font-rubik">Department</th>');
+                headersRow.append('<th class="px-4 py-2 md:w-1/6 border-b-2 border-gray-200 text-left text-xs font-semibold uppercase tracking-wider font-rubik">Sip number</th>');
+
+                thead.append(headersRow);
+
+                // Loop through data to create rows
+                for (var i = 0; i < data.length; i++) {
+                    var row = $('<tr></tr>');
+                    row.append('<td class="px-4 py-2 md:w-1/6 text-left font-poppins"><a href="display.php?username=' + encodeURIComponent(data[i].username) + '" class="text-blue-700">' + data[i].name + ' ' + data[i].mname + ' ' + data[i].lname + '</a></td>');
+                    row.append('<td class="py-4 p-2 uppercase font-poppins">' + data[i].department + '</td>');
+                    row.append('<td class="px-4 py-2 md:w-1/6 text-left font-poppins">' + data[i].username + '</td>');
+
+                    tbody.append(row);
                 }
-            },
-        });
-    }
-    // Function to display results in the table
-    function displayResults(data) {
 
-        var resultsContainer = $('#resultsContainer');
-        resultsContainer.empty();
+                table.append(thead);
+                table.append(tbody);
+                resultsContainer.append(table);
+            } else {
+                console.log('No results found.');
+                resultsContainer.text('No results found.');
+            }
+        }
 
-        if (data.length > 0) {
-            var table = $('<table class="min-w-full divide-y divide-gray-200"></table>');
-            var thead = $('<thead></thead>');
-            var tbody = $('<tbody class="text-gray-700 font-light"></tbody>');
+        // Function to display pagination
+        function displayPagination(currentPage, totalPages) {
 
-            // Add table headers
-            var headersRow = $('<tr class="bg-green-700 text-white"></tr>');
-            headersRow.append('<th class="px-4 py-2 md:w-1/6 border-b-2 border-gray-200 text-left text-xs font-semibold uppercase tracking-wide font-rubik">Name</th>');
-            headersRow.append('<th class="px-4 py-2 md:w-1/6 border-b-2 border-gray-200 text-left text-xs font-semibold uppercase tracking-wider font-rubik">Department</th>');
-            headersRow.append('<th class="px-4 py-2 md:w-1/6 border-b-2 border-gray-200 text-left text-xs font-semibold uppercase tracking-wider font-rubik">Sip number</th>');
+            var paginationContainer = $('#resultsContainer');
 
-            thead.append(headersRow);
+            var pagination = $('<div class="flex items-center justify-end space-x-2 text-sm mt-4"></div>');
 
-            // Loop through data to create rows
-            for (var i = 0; i < data.length; i++) {
-                var row = $('<tr></tr>');
-                row.append('<td class="px-4 py-2 md:w-1/6 text-left font-poppins"><a href="display.php?username=' + encodeURIComponent(data[i].username) + '" class="text-blue-700">' + data[i].name + ' ' + data[i].mname + ' ' + data[i].lname + '</a></td>');
-                row.append('<td class="py-4 p-2 uppercase font-poppins">' + data[i].department + '</td>');
-                row.append('<td class="px-4 py-2 md:w-1/6 text-left font-poppins">' + data[i].username + '</td>');
-
-                tbody.append(row);
+            if (currentPage > 1) {
+                pagination.append('<a href="#" data-page="' + (currentPage - 1) + '" title="previous" class="pagination-link inline-flex items-center justify-center w-8 h-8 bg-gray-200 text-gray-600 rounded-md shadow"><svg viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="w-4"><polyline points="15 18 9 12 15 6"></polyline></svg></a>');
             }
 
-            table.append(thead);
-            table.append(tbody);
-            resultsContainer.append(table);
-        } else {
-            console.log('No results found.');
-            resultsContainer.text('No results found.');
-        }
-    }
+            pagination.append('<span class="text-gray-600">Page ' + currentPage + ' of ' + totalPages + '</span>');
 
-    // Function to display pagination
-    function displayPagination(currentPage, totalPages) {
+            if (currentPage < totalPages) {
+                pagination.append('<a href="#" data-page="' + (currentPage + 1) + '" title="next" class="pagination-link inline-flex items-center justify-center w-8 h-8 bg-gray-200 text-gray-600 rounded-md shadow"><svg viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="w-4"><polyline points="9 18 15 12 9 6"></polyline></svg></a>');
+            }
 
-        var paginationContainer = $('#resultsContainer');
+            paginationContainer.append(pagination);
 
-        var pagination = $('<div class="flex items-center justify-end space-x-2 text-sm mt-4"></div>');
-
-        if (currentPage > 1) {
-            pagination.append('<a href="#" data-page="' + (currentPage - 1) + '" title="previous" class="pagination-link inline-flex items-center justify-center w-8 h-8 bg-gray-200 text-gray-600 rounded-md shadow"><svg viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="w-4"><polyline points="15 18 9 12 15 6"></polyline></svg></a>');
+            // Add click event for pagination links
+            $('.pagination-link').on('click', function (e) {
+                e.preventDefault();
+                page = parseInt($(this).data('page'));
+                console.log('Pagination link clicked. Fetching data for page:', page);
+                fetchData();
+            });
         }
 
-        pagination.append('<span class="text-gray-600">Page ' + currentPage + ' of ' + totalPages + '</span>');
+        // Function to display error message
+        function displayErrorMessage(message) {
+            console.log('Displaying error message:', message);
 
-        if (currentPage < totalPages) {
-            pagination.append('<a href="#" data-page="' + (currentPage + 1) + '" title="next" class="pagination-link inline-flex items-center justify-center w-8 h-8 bg-gray-200 text-gray-600 rounded-md shadow"><svg viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="w-4"><polyline points="9 18 15 12 9 6"></polyline></svg></a>');
+            var resultsContainer = $('#resultsContainer');
+            resultsContainer.text('Error: ' + message);
         }
 
-        paginationContainer.append(pagination);
-
-        // Add click event for pagination links
-        $('.pagination-link').on('click', function (e) {
-            e.preventDefault();
-            page = parseInt($(this).data('page'));
-            console.log('Pagination link clicked. Fetching data for page:', page);
-            fetchData();
-        });
-    }
-
-    // Function to display error message
-    function displayErrorMessage(message) {
-        console.log('Displaying error message:', message);
-
-        var resultsContainer = $('#resultsContainer');
-        resultsContainer.text('Error: ' + message);
-    }
-
-    // Initial data fetch
-    fetchData();
-});
+        // Initial data fetch
+        fetchData();
+    });
     </script>
 </body>
 </html>
