--- a/Management/header/interns_nav.html
+++ b/Management/header/interns_nav.html
@@ -83,7 +83,7 @@
             </a>
           </li>
           <li>
-            <a href="../monthly reports/reports_table.html" class="relative flex flex-row items-center h-11 focus:outline-none hover:bg-gray-50 text-white     hover:text-gray-800 border-l-4 border-transparent hover:border-indigo-500 pr-6">
+            <a href="../monthly reports/acomplishment_tab.php" class="relative flex flex-row items-center h-11 focus:outline-none hover:bg-gray-50 text-white     hover:text-gray-800 border-l-4 border-transparent hover:border-indigo-500 pr-6">
               <span class="inline-flex justify-center items-center ml-4">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
                                 class="w-5 h-5">
