--- a/Management/interns_dashboard.html
+++ b/Management/interns_dashboard.html
@@ -40,7 +40,7 @@
             </div>
             <div class="flex items-center p-8 bg-white shadow rounded-lg">
               <div class="inline-flex flex-shrink-0 items-center justify-center h-16 w-16 text-green-600 bg-green-100 rounded-full mr-6">
-                <a href="monthly reports/acomplishment_tab.php">
+                <a href="monthly reports/acomplishment_tab.html">
                   <img src="icons/monthly reports.png" class="h-16 w-16 rounded-full" alt="Image 1">
                 </a>
               </div>
@@ -103,10 +103,10 @@
       </div>
       <script>
          $(document).ready(function() {
-        $("#dashboard-panel-container").load("/header/interns_panel.html");
+        $("#dashboard-panel-container").load("header/interns_panel.html");
     });
        $(document).ready(function() {
-        $("#carousel-container").load("/carousel/carousel.html");
+        $("#carousel-container").load("carousel/carousel.html");
     });
 
         document.addEventListener('DOMContentLoaded', function() {
